[gd_scene load_steps=7 format=2]

[ext_resource path="res://RainIsoMainContents/Resources/PauseScreenBlack.png" type="Texture" id=1]
[ext_resource path="res://RainIsoMainContents/Resources/Fonts/RainIsoFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://RainIsoMainContents/Scenes/EditorPause.gd" type="Script" id=3]
[ext_resource path="res://RainIsoMainContents/Scenes/EditorPauseControl.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
use_filter = true
font_data = ExtResource( 2 )

[node name="EditorPause" type="CanvasLayer"]
pause_mode = 2
layer = 128
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="Control"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Control"]
margin_top = 192.0
margin_right = 1280.0
margin_bottom = 288.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.941176, 0.941176, 1 )
enabled_focus_mode = 0
text = "Continue"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Control"]
margin_top = 351.0
margin_right = 1280.0
margin_bottom = 447.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.941176, 0.941176, 0.941176, 1 )
custom_colors/font_color_pressed = Color( 0.941176, 0.941176, 0.941176, 1 )
enabled_focus_mode = 0
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Control" to="Control" method="_on_Control_mouse_entered"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="Control" method="_on_Control_mouse_exited"]
[connection signal="mouse_exited" from="Control" to="." method="_on_Control_mouse_exited"]
[connection signal="pressed" from="Control/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
